Updating layout, adding hub

--- a/themes/cleanblog/layout/_partial/footer.ejs
+++ b/themes/cleanblog/layout/_partial/footer.ejs
@@ -83,8 +83,7 @@
                     </li>
                     <% } %>
                 </ul>
-                <p class="copyright text-muted">Built on <a target="_blank" href="https://hexo.io/">Hexo</a>
-                    using the <a href="https://github.com/klugjo/hexo-theme-clean-blog" target="_blank">Clean Blog Theme</a>.</p>
+                <p class="copyright text-muted">Built on <a target="_blank" href="https://hexo.io/">Hexo</a> using the <a href="https://github.com/klugjo/hexo-theme-clean-blog" target="_blank">Clean Blog Theme</a>. Cover photo by <a target="_blank" href="https://unsplash.com/@albertosaure">Luis Llerena</a>.</p>
             </div>
         </div>
     </div>
