--- a/themes/cleanblog/layout/index.ejs
+++ b/themes/cleanblog/layout/index.ejs
@@ -1,6 +1,6 @@
 <!-- Page Header -->
 <!-- Set your background image for this header in the theme's configuration: index_cover -->
-<header class="intro-header" style="background-color: #F58532;/*background-image: url('<%- theme.index_cover %>');*/">
+<header class="intro-header" style="background-image: url('<%- theme.index_cover %>');">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -18,6 +18,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            <h3 style="color:#999">Latest News:</h3>
             <% page.posts.each(function(item){ %>
                 <%- partial('_partial/article-index', {item: item}) %>
             <% }); %>
