--- a/themes/cleanblog/source/css/base.styl
+++ b/themes/cleanblog/source/css/base.styl
@@ -104,7 +104,7 @@ hr.small
       transform translate3d(0, 100%, 0)
 
 .intro-header
-  background-color gray
+  background-color black
   background-position center center
   background-attachment scroll
   @extend .background-cover
@@ -123,7 +123,7 @@ hr.small
       margin-top 0
       font-size 50px
     .subheading
-      font-size 24px
+      font-size 50px
       line-height 1.1
       display block
       @extend .sans-serif
