--- a/themes/cleanblog/layout/_partial/footer.ejs
+++ b/themes/cleanblog/layout/_partial/footer.ejs
@@ -88,3 +88,4 @@
         </div>
     </div>
 </footer>
+<script type="text/javascript">var mc2fu0g25k6tvl;(function(d,t) {var s=d.createElement(t),opts={"checkoutToken":"2fu0g25k6tvl","width":"100%"};s.src='https://d2l7e0y6ygya2s.cloudfront.net/assets/embed.js';s.onload=s.onreadystatechange = function() {var rs=this.readyState;if(rs) if(rs!='complete') if(rs!='loaded') return;try {mc2fu0g25k6tvl=new MoonclerkEmbed(opts);mc2fu0g25k6tvl.display();} catch(e){}};var scr=d.getElementsByTagName(t)[0];scr.parentNode.insertBefore(s,scr);})(document,'script');</script>
